syntax = "proto3";
package mrfogg.lottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/params.proto";
import "lottery/game_info.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/Mrfogg/lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/Mrfogg/lottery/lottery/params";
  }
  // Queries a GameInfo by index.
	rpc GameInfo(QueryGetGameInfoRequest) returns (QueryGetGameInfoResponse) {
		option (google.api.http).get = "/Mrfogg/lottery/lottery/game_info/{index}";
	}

	// Queries a list of GameInfo items.
	rpc GameInfoAll(QueryAllGameInfoRequest) returns (QueryAllGameInfoResponse) {
		option (google.api.http).get = "/Mrfogg/lottery/lottery/game_info";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetGameInfoRequest {
	  string index = 1;

}

message QueryGetGameInfoResponse {
	GameInfo gameInfo = 1 [(gogoproto.nullable) = false];
}

message QueryAllGameInfoRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllGameInfoResponse {
	repeated GameInfo gameInfo = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
